ingress-controller-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-findme
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /find-me-web(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: find-me-web-test
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: find-me-web-test
            port:
              number: 80
